--- a/Introduction_critère_Shannon(3).ipynb
+++ b/Introduction_critère_Shannon(3).ipynb
@@ -791,7 +791,7 @@
     "On utilise donc cette observation pour décrire un critère qualitatif, désignant la fréquence d'échantillonnage minimale nécessaire pour échantillonner correctement un signal : \n",
     "\n",
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Critère de Shannon :</b> Pour échantillonner correctement un signal de fréquence maximale $f$, la fréquence d'échantillonnage doit valoir au moins $2f_e$.\n",
+    "<b>Critère de Shannon :</b> Pour échantillonner correctement un signal de fréquence maximale $f$, la fréquence d'échantillonnage doit valoir au moins $2f$.\n",
     "</div>\n",
     "\n",
     "\n",
